--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
 
+/* Para navegadores baseados em Firefox */
+.scrollbar-hide {
+  scrollbar-width: none;
+}
  
 @layer base {
   :root {
@@ -71,6 +78,17 @@
 @layer base {
   * {
     @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+ 
+
+ 
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
   }
   body {
     @apply bg-background text-foreground;
